[tool.poetry]
name = "nikko-survey"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nikko_survey"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.3.0"
pyyaml = "^6.0"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
